{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 160,
  "lineage": "f64c86e3-cbcf-dc8e-8a9f-9d237a7c37c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368625415100:internet-gateway/igw-024bfb6052c1e0dc9",
            "id": "igw-024bfb6052c1e0dc9",
            "owner_id": "368625415100",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-007380a502ba4d1b0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368625415100:route-table/rtb-05752bc61cbae9dfa",
            "id": "rtb-05752bc61cbae9dfa",
            "owner_id": "368625415100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024bfb6052c1e0dc9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-rt"
            },
            "tags_all": {
              "Name": "my-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-007380a502ba4d1b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-rt-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081ad7bf87295fc6a",
            "route_table_id": "rtb-05752bc61cbae9dfa",
            "subnet_id": "subnet-06dcedb6e3868fc2b"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rt",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-rt-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bef01344fc583493",
            "route_table_id": "rtb-05752bc61cbae9dfa",
            "subnet_id": "subnet-01ff0dd5e493c55fa"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rt",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368625415100:security-group/sg-02317267075dd901f",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02317267075dd901f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security-group-1",
            "name_prefix": "",
            "owner_id": "368625415100",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg-1"
            },
            "tags_all": {
              "Name": "my-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-007380a502ba4d1b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368625415100:subnet/subnet-06dcedb6e3868fc2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dcedb6e3868fc2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "368625415100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-007380a502ba4d1b0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368625415100:subnet/subnet-01ff0dd5e493c55fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ff0dd5e493c55fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "368625415100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-2"
            },
            "tags_all": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-007380a502ba4d1b0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368625415100:vpc/vpc-007380a502ba4d1b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dff0bf8859508cd2",
            "default_route_table_id": "rtb-052fcae59a0469145",
            "default_security_group_id": "sg-0c5b20df2d1df2e91",
            "dhcp_options_id": "dopt-068c452fad2b7f637",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007380a502ba4d1b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052fcae59a0469145",
            "owner_id": "368625415100"
          }
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-eks-efs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368625415100:security-group/sg-0e4bad5abc77c24ca",
            "description": "Allow inbound traffic from EKS cluster",
            "egress": [],
            "id": "sg-0e4bad5abc77c24ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow inbound NFS traffic from EKS cluster",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "my-eks-efs-sg",
            "name_prefix": "",
            "owner_id": "368625415100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007380a502ba4d1b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368625415100:security-group/sg-08dd9199a22d07973",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dd9199a22d07973",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access to public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Prometheus inbound traffic",
                "from_port": 30910,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30910
              }
            ],
            "name": "eks-test",
            "name_prefix": "",
            "owner_id": "368625415100",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007380a502ba4d1b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}